--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,8 @@
 } */
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: #8cc2e1;
+  color: #2b263b;
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
 }
